--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai": "^4.24.1"
+    "openai": "^4.24.1",
+    "serpapi": "^2.0.0"
   }
 }
